Fixed the arrow in Chat to align-self to the left

--- a/react-socketio-app/src/components/chat/Chat.css
+++ b/react-socketio-app/src/components/chat/Chat.css
@@ -9,6 +9,10 @@
   padding: 1em;
 }
 
+a {
+  align-self: start;
+}
+
 div[role=listitem] {
   text-align: right;
   padding-right: 1em;
